--- a/.github/workflows/nodes__speech2text.yml
+++ b/.github/workflows/nodes__speech2text.yml
@@ -1,17 +1,17 @@
 # SPDX-FileCopyrightText: 2022-present deepset GmbH <info@deepset.ai>
 #
 # SPDX-License-Identifier: Apache-2.0
-name: Test text2speech
+name: Test speech2text
 
 on:
   push:
     paths:
-      - 'nodes/text2speech/**'
-      - '.github/workflows/test__text2speech.yml'
+      - 'nodes/speech2text/**'
+      - '.github/workflows/nodes__speech2text.yml'
 
 env:
-  PACKAGE: nodes/text2speech/
-  MODULE: text2speech
+  PACKAGE: nodes/speech2text/
+  MODULE: speech2text
   PYTEST_PARAMS: --maxfail=5 --durations=10
 
 jobs:
@@ -36,6 +36,7 @@ jobs:
       run: pip install ${{ env.PACKAGE }}[dev]
 
     - name: Mypy
+      if: steps.files.outputs.any_changed == 'true'
       run: |
         mkdir .mypy_cache/
         mypy --install-types --non-interactive .
@@ -51,19 +52,11 @@ jobs:
       with:
         package: ${{ env.PACKAGE }}
 
-    - name: Install audio libraries
-      if: matrix.os == "ubuntu-latest"
-      run: |
-        sudo apt-get update
-        sudo apt-get install libsndfile1 ffmpeg
-
-    - name: Install dependencies
-      run: pip install ${{ env.PACKAGE }}[dev]
-
     - name: Pylint
       run: |
         cd ${{ env.PACKAGE }}
         pylint -ry -j 0 ${{ env.MODULE }}/
+
 
   unit-tests:
     name: Unit / ${{ matrix.os }}
@@ -75,6 +68,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]  # windows-latest --> No audio deps available for Windows.
     runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v2
 
@@ -88,8 +82,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install libsndfile1 ffmpeg
 
-      - name: Install deps
-        run: pip install ${{ env.PACKAGE }}[dev]
+      - name: Install Haystack
+        run: |
+          pip install ${{ env.PACKAGE }}[dev]
+          pip install git+https://github.com/openai/whisper.git
 
       - name: Run
         run: pytest ${{ env.PYTEST_PARAMS }} -m "unit" ${{ env.PACKAGE }}
@@ -119,8 +115,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install libsndfile1 ffmpeg
 
-    - name: Install deps
-      run: pip install ${{ env.PACKAGE }}[dev]
+    - name: Install Haystack
+      run: |
+        pip install ${{ env.PACKAGE }}[dev]
+        pip install git+https://github.com/openai/whisper.git
 
     - name: Run tests
       env:
