--- a/.github/workflows/nodes__speech2text.yml
+++ b/.github/workflows/nodes__speech2text.yml
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: 2022-present deepset GmbH <info@deepset.ai>
 #
 # SPDX-License-Identifier: Apache-2.0
-name: Test speech2text
+name: Test / speech2text
 
 on:
   push:
