--- a/.github/workflows/nodes__text2speech.yml
+++ b/.github/workflows/nodes__text2speech.yml
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: 2022-present deepset GmbH <info@deepset.ai>
 #
 # SPDX-License-Identifier: Apache-2.0
-name: Test text2speech
+name: Test / text2speech
 
 on:
   push:
