--- a/.github/workflows/nodes_speech2text.yml
+++ b/.github/workflows/nodes_speech2text.yml
@@ -4,12 +4,7 @@ on:
   push:
     paths:
       - 'nodes/speech2text/**'
-      - '.github/workflows/nodes__speech2text.yml'
-
-env:
-  PACKAGE: nodes/speech2text/
-  MODULE: speech2text
-  PYTEST_PARAMS: --maxfail=5 --durations=10
+      - '.github/workflows/nodes_speech2text.yml'
 
 jobs:
 
@@ -19,25 +14,23 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup Python
-      uses: ./.github/actions/python_cache/
-      with:
-        package: ${{ env.PACKAGE }}
+      uses: actions/setup-python@v3
 
     - name: Install audio libraries
-      if: matrix.os == "ubuntu-latest"
       run: |
         sudo apt-get update
         sudo apt-get install libsndfile1 ffmpeg
 
     - name: Install dependencies
-      run: pip install ${{ env.PACKAGE }}[dev]
+      run: |
+        pip install ${{ env.PACKAGE }}[dev]
+        pip install git+https://github.com/openai/whisper.git
 
     - name: Mypy
       if: steps.files.outputs.any_changed == 'true'
       run: |
         mkdir .mypy_cache/
-        mypy --install-types --non-interactive .
-
+        mypy --install-types --non-interactive nodes/speech2text/
 
   pylint:
     runs-on: ubuntu-latest
@@ -45,80 +38,41 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup Python
-      uses: ./.github/actions/python_cache/
-      with:
-        package: ${{ env.PACKAGE }}
-
-    - name: Pylint
-      run: |
-        cd ${{ env.PACKAGE }}
-        pylint -ry -j 0 ${{ env.MODULE }}/
-
-
-  unit-tests:
-    name: Unit / ${{ matrix.os }}
-    needs:
-      - mypy
-      - pylint
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]  # windows-latest --> No audio deps available for Windows.
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: ./.github/actions/python_cache/
-        with:
-          package: ${{ env.PACKAGE }}
-
-      - name: Install audio libraries
-        run: |
-          sudo apt-get update
-          sudo apt-get install libsndfile1 ffmpeg
-
-      - name: Install Haystack
-        run: |
-          pip install ${{ env.PACKAGE }}[dev]
-          pip install git+https://github.com/openai/whisper.git
-
-      - name: Run
-        run: pytest ${{ env.PYTEST_PARAMS }} -m "unit" ${{ env.PACKAGE }}
-
-
-  integration-tests:
-    name: Integration / ${{ matrix.os }}
-    needs:
-      - unit-tests
-    timeout-minutes: 60
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]  # windows-latest --> No audio deps available for Windows.
-    runs-on: ${{ matrix.os }}
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup Python
-      uses: ./.github/actions/python_cache/
-      with:
-        package: ${{ env.PACKAGE }}
+      uses: actions/setup-python@v3
 
     - name: Install audio libraries
       run: |
         sudo apt-get update
         sudo apt-get install libsndfile1 ffmpeg
 
-    - name: Install Haystack
+    - name: Install dependencies
       run: |
         pip install ${{ env.PACKAGE }}[dev]
         pip install git+https://github.com/openai/whisper.git
 
-    - name: Run tests
-      env:
-        TOKENIZERS_PARALLELISM: 'false'  # Avoid logspam by tokenizers
+    - name: Pylint
       run: |
-        pytest ${{ env.PYTEST_PARAMS }} -m "integration" ${{ env.PACKAGE }}
+        pylint -ry -j 0 nodes/speech2text/
+
+  test:
+    runs-on: ubuntu-latest
+    container: deepset/haystack:base-cpu-main
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install libs
+        if: matrix.os == "ubuntu-latest"
+        run: |
+          sudo apt-get update
+          sudo apt-get install libsndfile1 ffmpeg
+
+      - name: Install speech2text
+        run: |
+          pip install -e nodes/speech2text[dev]
+          pip install git+https://github.com/openai/whisper.git
+
+      - name: Run tests
+        run: |
+          pytest nodes/speech2text
