--- a/.github/workflows/nodes_speech2text.yml
+++ b/.github/workflows/nodes_speech2text.yml
@@ -21,12 +21,12 @@ jobs:
 
     - name: Install audio libraries
       run: |
-        sudo apt-get update
-        sudo apt-get install libsndfile1 ffmpeg
+        apt-get update
+        apt-get install libsndfile1 ffmpeg
 
     - name: Install dependencies
       run: |
-        pip install ${{ env.PACKAGE }}[dev]
+        pip install nodes/speech2text/[dev]
         pip install git+https://github.com/openai/whisper.git
 
     - name: Mypy
@@ -45,12 +45,12 @@ jobs:
 
     - name: Install audio libraries
       run: |
-        sudo apt-get update
-        sudo apt-get install libsndfile1 ffmpeg
+        apt-get update
+        apt-get install libsndfile1 ffmpeg
 
     - name: Install dependencies
       run: |
-        pip install ${{ env.PACKAGE }}[dev]
+        pip install nodes/speech2text/[dev]
         pip install git+https://github.com/openai/whisper.git
 
     - name: Pylint
@@ -67,8 +67,8 @@ jobs:
 
       - name: Install libs
         run: |
-          sudo apt-get update
-          sudo apt-get install libsndfile1 ffmpeg
+          apt-get update
+          apt-get install libsndfile1 ffmpeg
 
       - name: Install speech2text
         run: |
