--- a/.github/workflows/nodes_text2speech.yml
+++ b/.github/workflows/nodes_text2speech.yml
@@ -21,8 +21,8 @@ jobs:
 
     - name: Install audio libraries
       run: |
-        apt-get update
-        apt-get install libsndfile1 ffmpeg
+        sudo apt-get -y update
+        sudo apt-get-y install libsndfile1 ffmpeg
 
     - name: Install dependencies
       run: pip install nodes/text2speech/[dev]
@@ -43,8 +43,9 @@ jobs:
 
     - name: Install audio libraries
       run: |
-        apt-get update
-        apt-get install libsndfile1 ffmpeg
+        sudo apt-get -y update
+        sudo apt-get-y install libsndfile1 ffmpeg
+
 
     - name: Install dependencies
       run: pip install nodes/text2speech/[dev]
@@ -63,8 +64,8 @@ jobs:
 
       - name: Install libs
         run: |
-          apt-get update
-          apt-get install libsndfile1 ffmpeg
+          apt-get -y update
+          apt-get-y install libsndfile1 ffmpeg
 
       - name: Install text2speech
         run: |
