--- a/nodes/speech2text/pyproject.toml
+++ b/nodes/speech2text/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "git+https://github.com/numba/numba.git@py3.11", # Temporary: https://github.com/numba/numba/issues/8304
+  "numba @ git+https://github.com/numba/numba.git@py3.11", # Temporary: https://github.com/numba/numba/issues/8304
   "farm-haystack",
   "numpy",
   "torch",
