--- a/nodes/text2speech/pyproject.toml
+++ b/nodes/text2speech/pyproject.toml
@@ -36,23 +36,15 @@ dependencies = [
   "espnet",
   "espnet-model-zoo",
   "pydub",
+  "ffmpeg-python"
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
 dev = [
-  "pre-commit",
-  "mypy",
-  "typing_extensions; python_version < '3.8'",
   "pytest",
-  "tox",
-  "coverage",
   "pylint",
-  "black[jupyter]==22.8.0",
-  "pydoc-markdown",
-  "mkdocs",
-  "jupytercontrib",
-  "pytest-custom_exit_code",  # used in the CI
+  "black"
 ]
 
 [project.urls]
