--- a/nodes/text2speech/pyproject.toml
+++ b/nodes/text2speech/pyproject.toml
@@ -85,13 +85,19 @@ exclude_lines = [
 max-line-length=120
 disable = [
   "missing-module-docstring",
-  "fixme"
+  "fixme",
+  "R0913",
+  "W0221"
 ]
 [tool.pylint.'DESIGN']
 max-args=7
 [tool.pylint.'SIMILARITIES']
 min-similarity-lines=10
 ignore-comments=true
+[tool.pylint.'TYPECHECK']
+# List of members which are set dynamically and missed by Pylint inference
+# system, and so shouldn't trigger E1101 when accessed.
+generated-members="torch.*"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
