--- a/.github/workflows/nodes_speech2text.yml
+++ b/.github/workflows/nodes_speech2text.yml
@@ -9,72 +9,35 @@ on:
       - 'nodes/speech2text/**'
       - '.github/workflows/nodes_speech2text.yml'
 
+defaults:
+  run:
+    working-directory: nodes/speech2text
+
 jobs:
-
-  mypy:
+  test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v3
 
     - name: Setup Python
       uses: actions/setup-python@v3
+      with:
+        python-version: '3.10'
 
     - name: Install audio libraries
       run: |
         sudo apt-get update
         sudo apt-get install libsndfile1 ffmpeg
 
-    - name: Install dependencies
+    - name: Install speech2text
       run: |
-        pip install ${{ env.PACKAGE }}[dev]
-        pip install git+https://github.com/openai/whisper.git
-
-    - name: Mypy
-      if: steps.files.outputs.any_changed == 'true'
-      run: |
-        mkdir .mypy_cache/
-        mypy --install-types --non-interactive nodes/speech2text/
-
-  pylint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup Python
-      uses: actions/setup-python@v3
-
-    - name: Install audio libraries
-      run: |
-        sudo apt-get update
-        sudo apt-get install libsndfile1 ffmpeg
-
-    - name: Install dependencies
-      run: |
-        pip install ${{ env.PACKAGE }}[dev]
-        pip install git+https://github.com/openai/whisper.git
+        pip install -e .[dev]
 
     - name: Pylint
       run: |
-        pylint -ry -j 0 nodes/speech2text/
+        pylint -ry -j 0 ./speech2text/
 
-  test:
-    runs-on: ubuntu-latest
-    container: deepset/haystack:base-cpu-main
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install libs
-        run: |
-          sudo apt-get update
-          sudo apt-get install libsndfile1 ffmpeg
-
-      - name: Install speech2text
-        run: |
-          pip install -e nodes/speech2text[dev]
-          pip install git+https://github.com/openai/whisper.git
-
-      - name: Run tests
-        run: |
-          pytest nodes/speech2text
+    - name: Run tests
+      run: |
+        pytest
