--- a/nodes/speech2text/pyproject.toml
+++ b/nodes/speech2text/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
   "numpy",
   "torch",
   "pydantic",
-  "torchaudio"
+  "torchaudio",
+  "git+https://github.com/openai/whisper.git"
 ]
 
 dynamic = ["version"]
