--- a/nodes/speech2text/pyproject.toml
+++ b/nodes/speech2text/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
   "torch",
   "pydantic",
   "torchaudio",
-  "whisper@git+https://github.com/openai/whisper.git"
+  "openai-whisper @ git+https://github.com/openai/whisper.git"
 ]
 
 dynamic = ["version"]
