--- a/nodes/speech2text/pyproject.toml
+++ b/nodes/speech2text/pyproject.toml
@@ -6,15 +6,13 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "haystack-speech2text"
+name = "farm-haystack-speech2text"
 description = 'Haystack node to convert audio files into Documents.'
 readme = "README.md"
 requires-python = ">=3.7"
 license = "Apache-2.0"
 keywords = []
-authors = [
-  { name = "deepset GmbH", email = "info@deepset.ai" },
-]
+authors = [{ name = "deepset GmbH", email = "info@deepset.ai" }]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
@@ -34,14 +32,10 @@ dependencies = [
   "torchaudio",
   "openai-whisper @ git+https://github.com/openai/whisper.git"
 ]
-
 dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = [
-  "pytest",
-  "pylint"
-]
+dev = ["pytest", "pylint"]
 
 [project.urls]
 Documentation = "https://github.com/deepset-ai/haystack-extras/tree/main/nodes/speech2text#readme"
@@ -52,10 +46,8 @@ Source = "https://github.com/deepset-ai/haystack-extras/tree/main/nodes/speech2t
 path = "speech2text/__about__.py"
 
 [tool.hatch.envs.default]
-dependencies = [
-  "pytest",
-  "pytest-cov",
-]
+dependencies = ["pytest", "pytest-cov"]
+
 [tool.hatch.envs.default.scripts]
 cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=speech2text --cov=tests"
 no-cov = "cov --no-cov"
@@ -69,35 +61,25 @@ python = ["37", "38", "39", "310", "311"]
 [tool.coverage.run]
 branch = true
 parallel = true
-omit = [
-  "speech2text/__about__.py",
-]
+omit = ["speech2text/__about__.py"]
 
 [tool.coverage.report]
-exclude_lines = [
-  "no cov",
-  "if __name__ == .__main__.:",
-  "if TYPE_CHECKING:",
-]
+exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
 
 [tool.pylint.'MESSAGES CONTROL']
-max-line-length=120
-disable = [
-  "missing-module-docstring",
-  "fixme"
-]
+max-line-length = 120
+disable = ["missing-module-docstring", "fixme"]
+
 [tool.pylint.'DESIGN']
-max-args=7
+max-args = 7
+
 [tool.pylint.'SIMILARITIES']
-min-similarity-lines=6
+min-similarity-lines = 6
 
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "--strict-markers"
-markers = [
-  "integration: integration tests",
-  "unit: unit tests",
-]
+markers = ["integration: integration tests", "unit: unit tests"]
 log_cli = true
 
 [tool.black]
