--- a/.github/workflows/pypi_release.yml
+++ b/.github/workflows/pypi_release.yml
@@ -1,5 +1,14 @@
 name: Project release on PyPi
 
+# The pushed tag must be formatted like so:
+# * nodes/speech2text-v1.0.0
+# * stores/mongodb-documentstore-v1.2.3
+#
+# The first part must be the path of the project being released.
+# If we want to release version 1.0.0 of project speech2text
+# that lives in path nodes/speech2text we'd have to push a
+# nodes/speech2text-v1.0.0 tag.
+
 on:
   push:
     tags:
