--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -58,4 +58,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git checkout -b ${{ inputs.project-path }}/version-bump
           git commit -am "${{ inputs.project-path }} version bump to ${{ inputs.new-version }}"
+          git push -u origin ${{ inputs.project-path }}/version-bump
           gh pr create --base main --fill --reviewer deepset-ai/core-engineering
