Fix pypi_release.yml import in Python script

--- a/.github/workflows/pypi_release.yml
+++ b/.github/workflows/pypi_release.yml
@@ -29,6 +29,7 @@ jobs:
         id: pathfinder
         shell: python
         run: |
+          import os
           project_path = "${{ github.ref_name }}".rsplit("-", maxsplit=1)[0]
           with open(os.environ['GITHUB_OUTPUT'], 'a') as f:
             print(f'{project_path}={project_path}', file=f)
