--- a/nodes/text2speech/pyproject.toml
+++ b/nodes/text2speech/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "soundfile",
   "pyworld<=0.2.12",
   "espnet",
+  "typeguard==2.13.3",
   "espnet-model-zoo",
   "pydub",
   "ffmpeg-python"
