--- a/.github/workflows/stores_milvus_document_store.yml
+++ b/.github/workflows/stores_milvus_document_store.yml
@@ -28,7 +28,7 @@ jobs:
         python-version: ${{ env.PYTHON_VERSION }}
 
     - name: Install MilvusDocumentStore
-      run: pip install stores/milvus-documentstore
+      run: pip install stores/milvus-documentstore[dev]
 
     - name: Setup Milvus
       run: |
