--- a/.github/workflows/stores_milvus_document_store.yml
+++ b/.github/workflows/stores_milvus_document_store.yml
@@ -13,6 +13,7 @@ on:
 
 env:
   PYTHON_VERSION: "3.8"
+  MILVUS_VERSION: "v2.2.8"
 
 jobs:
 
@@ -25,7 +26,7 @@ jobs:
 
     - name: Setup Milvus
       run: |
-        wget https://github.com/milvus-io/milvus/releases/download/v2.0.0/milvus-standalone-docker-compose.yml -O docker-compose.yml
+        wget https://github.com/milvus-io/milvus/releases/download/${{ env.MILVUS_VERSION }}/milvus-standalone-docker-compose.yml -O docker-compose.yml
         sudo docker-compose up -d
         sudo docker-compose ps
 
