--- a/stores/milvus-documentstore/pyproject.toml
+++ b/stores/milvus-documentstore/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "pymilvus>=2.0.0,<3",  # Refer to milvus support matrix at https://github.com/milvus-io/pymilvus#install-pymilvus
+  "pymilvus",  # Refer to milvus support matrix at https://github.com/milvus-io/pymilvus#install-pymilvus
   "farm-haystack[sql]",
 ]
 dynamic = ["version"]
