Fixed Dependency Version

--- a/nodes/text2speech/pyproject.toml
+++ b/nodes/text2speech/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
   "torch",
   "pydantic",
   "soundfile",
-  "pyworld<=0.2.12",
+  "pyworld>=0.3.1",
   "espnet",
   "typeguard==2.13.3",
   "espnet-model-zoo",
