--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "example-store"
+name = "chroma-store"
 dynamic = ["version"]
 description = ''
 readme = "README.md"
@@ -25,16 +25,16 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "farm-haystack"
+  "farm-haystack","chromadb"
 ]
 
 [project.urls]
-Documentation = "https://github.com/unknown/example-store#readme"
-Issues = "https://github.com/unknown/example-store/issues"
-Source = "https://github.com/unknown/example-store"
+Documentation = "https://github.com/unknown/chroma-store#readme"
+Issues = "https://github.com/unknown/chroma-store/issues"
+Source = "https://github.com/unknown/chroma-store"
 
 [tool.hatch.version]
-path = "src/example_store/__about__.py"
+path = "src/chroma_store/__about__.py"
 
 [tool.hatch.envs.default]
 dependencies = [
@@ -64,7 +64,7 @@ dependencies = [
   "ruff>=0.0.243",
 ]
 [tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:src/example_store tests}"
+typing = "mypy --install-types --non-interactive {args:src/chroma_store tests}"
 style = [
   "ruff {args:.}",
   "black --check --diff {args:.}",
@@ -130,7 +130,7 @@ unfixable = [
 ]
 
 [tool.ruff.isort]
-known-first-party = ["example_store"]
+known-first-party = ["chroma_store"]
 
 [tool.ruff.flake8-tidy-imports]
 ban-relative-imports = "all"
@@ -140,16 +140,16 @@ ban-relative-imports = "all"
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
 [tool.coverage.run]
-source_pkgs = ["example_store", "tests"]
+source_pkgs = ["chroma_store", "tests"]
 branch = true
 parallel = true
 omit = [
-  "src/example_store/__about__.py",
+  "src/chroma_store/__about__.py",
 ]
 
 [tool.coverage.paths]
-example_store = ["src/example_store", "*/example-store/src/example_store"]
-tests = ["tests", "*/example-store/tests"]
+chroma_store = ["src/chroma_store", "*/chroma-store/src/chroma_store"]
+tests = ["tests", "*/chroma-store/tests"]
 
 [tool.coverage.report]
 exclude_lines = [
