--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,9 @@ jobs:
         python-version: ['3.9', '3.10', '3.11']
 
     steps:
-    - run: git config core.longpaths true
+    - name: Support longpaths
+      if: matrix.os == 'windows-latest'
+      run: git config --system core.longpaths true
 
     - uses: actions/checkout@v3
 
