--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ cov = [
 ]
 
 [[tool.hatch.envs.all.matrix]]
-python = ["3.7", "3.8", "3.9", "3.10", "3.11"]
+python = ["3.9", "3.10"]
 
 [tool.hatch.envs.lint]
 detached = true
