--- a/.github/workflows/components_instructor_embedders.yml
+++ b/.github/workflows/components_instructor_embedders.yml
@@ -25,14 +25,15 @@ jobs:
       with:
         python-version: '3.10'
 
+    - name: Install Hatch
+      run: pip install --upgrade hatch
+
     - name: Install instructor-embedders
       run: |
         pip install -e .[dev]
 
-    - name: Pylint
-      run: |
-        pylint -ry -j 0 ./instructor_embedders
+    - name: Lint
+      run: hatch run lint:all
 
-    - name: Run tests
-      run: |
-        pytest
+    - name: Run tests and track code coverage
+      run: hatch run cov
