--- a/components/instructor-embedders/pyproject.toml
+++ b/components/instructor-embedders/pyproject.toml
@@ -52,7 +52,7 @@ dev = ["pytest", "pylint", "black"]
 [project.urls]
 Documentation = "https://github.com/deepset-ai/haystack-extras/tree/main/components/instructor-embedders#readme"
 Issues = "https://github.com/deepset-ai/haystack-extras/issues"
-Source = "https://github.com/deepset-ai/haystack-extras/tree/main/components/text2speech"
+Source = "https://github.com/deepset-ai/haystack-extras/tree/main/components/instructor-embedders"
 
 [tool.hatch.version]
 path = "instructor_embedders/__about__.py"
@@ -61,7 +61,7 @@ path = "instructor_embedders/__about__.py"
 dependencies = ["pytest", "pytest-cov"]
 
 [tool.hatch.envs.default.scripts]
-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=text2speech --cov=tests"
+cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=instructor-embedders --cov=tests"
 no-cov = "cov --no-cov"
 
 [[tool.hatch.envs.test.matrix]]
@@ -70,7 +70,7 @@ python = ["37", "38", "39", "310", "311"]
 [tool.coverage.run]
 branch = true
 parallel = true
-omit = ["text2speech/__about__.py"]
+omit = ["instructor_embedders/__about__.py"]
 
 [tool.coverage.report]
 exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
